fixed footer overlap

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ h3 {
     margin: 0 auto;
     margin-top: -5rem;
     padding: .5rem 0;
-    z-index: 100;
+    z-index: 10;
     display: flex;
     justify-content: center;
 }
@@ -212,7 +212,6 @@ h3 {
 }
 
 #portfolio-page {
-    height: calc(100vh - 3rem);
     width: 96%;
     margin: 0 auto;
     display: grid;
@@ -260,6 +259,8 @@ h3 {
 }
 
 #portfolio-cont {
+    height: calc(100% - 5rem);
+    overflow: scroll;
     padding: 0 1em;
     grid-row: 1 / 11;
     grid-column: 2 / 3;
@@ -282,7 +283,6 @@ h3 {
 }
 
 .coin-cont {
-    height: auto;
     width: 100%;
     padding: 1em;
     margin: 0 .5em;
